summative.moria.Moria.scala.error
Erreur de compilation :
Moria:2: error: not found: value estsurbiscuit
while(estFaceMur()==false || estsurbiscuit==false)
                             ^